--- a/index.html
+++ b/index.html
@@ -360,7 +360,7 @@
 							<ul>
                                 <li>by me</li>
                                 <li>Apr 21, 2020</li>
-                                <li><a href="#"><b> Comments</b></a></li>
+                                <li><a href="#"><b> </b></a></li>
                             </ul>
 							<p></p>
 						</div>
